# projectflow-desktop

./: .gitignore  .gitlab-ci.yml  .railwayignore  Cargo.toml  Procfile  README.md  app.py  bootstrap.sh  build-config.json  build.yml  config.json  default.json  deploy.yml  generate_icons.py  gunicorn.conf.py  index.html  lib.rs  main.js  main.rs  main.yml  nginx.conf  nixpacks.toml  package.json  preload.js  railway.json  splash.html  start.sh  systemd.service  tauri.conf.json
.github/workflows/: main.yml
