[package]
name = "projectflow"
version = "4.1.0"
description = "ProjectFlow Desktop"
authors = ["FSBL"]
edition = "2021"

[lib]
name = "projectflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "projectflow"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri              = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-notification = "2"
tauri-plugin-shell        = "2"
tauri-plugin-http         = "2"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
